--- a/style.css
+++ b/style.css
@@ -8,3 +8,30 @@
     background: #fafafa;
 
 }
+
+/* CONTAINERS */
+
+#main-container{
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+}
+
+#banner-container, #form-container{
+    flex: 1 1 0;
+    width: 50%;
+}
+
+#banner-container{
+    text-align: right;
+}
+
+#banner-container img{
+
+    margin-right: -15px;
+}
+
+#form-container{
+
+    text-align: center;
+}
